--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>my-first-website</title>
+  <title>Hicham</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-
+<h1>Personal Website</h1>
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
